--- a/beepy/src/main/res/values/strings.xml
+++ b/beepy/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Beepy</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_table">Choisissez votre table</string>
+    <string name="select">Sélectionner</string>
 </resources>
