--- a/beepy_waiters/src/main/res/values/strings.xml
+++ b/beepy_waiters/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Beepy Waiters</string>
-    <string name="call_answer">Répondre à l\'appel</string>
-    <string name="submit">Soumettre</string>
-    <string name="restaurant_choice">Choisissez votre restaurant</string>
-    <string name="select" tools:ignore="ExtraTranslation">Sélectionner</string>
+    <string name="submit">Submit</string>
+    <string name="restaurant_choice">Select your restaurant</string>
+    <string name="select">Select</string>
+    <string name="food_icon">Useless but beautiful icon of a fork and a knife</string>
+    <string name="food_name">Item\'s name</string>
+    <string name="food_price">Price</string>
+    <string name="food_delete">Remove the order from the bill</string>
+    <string name="waiter_answer_call">Answer the call</string>
+    <string name="ordered_items">Ordered items:</string>
+    <string name="food_name_hint">Name</string>
+    <string name="food_price_hint">Price in $</string>
+    <string name="bill_total">Total: 0.00</string>
+    <string name="table_select">Select</string>
 </resources>
